--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,6 @@
         "baseUrl": "."
     },
     "include": [
-        "src/**/*",
-        "node_modules/@teronis-js/**/dist/**/*"
+        "src/**/*"
     ]
 }
