--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "sourceMap": true,
         "target": "es6",
         "declaration": true,
-        "baseUrl": "."
+        "baseUrl": ".",
+        "moduleResolution": "node"
     },
     "include": [
         "src/**/*"
