--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "module": "src/index.ts",
   "types": "dist/teronis-js-webpack-templates.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "test": "mocha -r jsdom-global/register || true",
+    "build": "webpack || true"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,11 @@
     "@babel/preset-typescript": "^7.1.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.4",
+    "chai": "^4.2.0",
     "dts-bundle-webpack": "^1.0.0",
+    "jsdom": "^12.1.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^5.2.0",
     "source-map-loader": "^0.2.4",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.1.1",
