--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.1.1",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.1"
+    "webpack-cli": "^3.1.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {}
 }
